refactor IssueTransactionTest, added txMax and asserts added changes Randomizer.java added constants in TestData.java

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -28,4 +28,10 @@ paddle {
     min-asset-info-update-interval = 100000
     # faucet-seed = ""
   }
+  devnet1 {
+      api-url = "http://devnet1-htz-nbg1-1.wavesnodes.com:6869/"
+      block-interval = 60s
+      min-asset-info-update-interval = 100000
+      faucet-seed = "create genesis wallet devnet-0"
+    }
 }
