added async in @Before tests method for faster create tests data

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -34,4 +34,10 @@ paddle {
       min-asset-info-update-interval = 100000
       faucet-seed = "create genesis wallet devnet-0"
     }
+#     devnet4 {
+#         api-url = "http://devnet1-htz-nbg1-4.wavesnodes.com:6869/"
+#         block-interval = 60s
+#         min-asset-info-update-interval = 100000
+#         faucet-seed = "FATADDRESS"
+#       }
 }
