--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -38,6 +38,7 @@ paddle {
         api-url = "http://devnet1-htz-nbg1-4.wavesnodes.com:6869/"
         block-interval = 60s
         min-asset-info-update-interval = 100000
-        faucet-seed = "FATADDRESS"
+        chain-id = L
+        faucet-seed = "foo"
       }
 }
