--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,12 @@
             <artifactId>assertj-core</artifactId>
             <version>3.22.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.truth.extensions</groupId>
+            <artifactId>truth-proto-extension</artifactId>
+            <version>1.1.3</version>
+        </dependency>
     </dependencies>
 
 </project>
