--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -32,7 +32,7 @@ paddle {
       api-url = "http://devnet1-htz-nbg1-1.wavesnodes.com:6869/"
       block-interval = 60s
       min-asset-info-update-interval = 100000
-      faucet-seed = "foo3"
+      faucet-seed = "remain"
     }
     devnet4 {
         api-url = "http://devnet1-htz-nbg1-4.wavesnodes.com:6869/"
